<resources>
    <string name="app_name">WeatherApp</string>

    <string name="hint_city">City (i.e. Charlotte) </string>
    <string name="hint_state">State (i.e. NC) </string>
    <string name="action_submit">Search</string>
    <string name="text_lable_no_saved_cities">There are no cities to display. Search the city from the search box and save.</string>
    <string name="text_view_updated_on">Updated on: %s</string>
    <string name="text_view_saved_cities">Saved Cities</string>
    <string name="text_view_saved_temperature_celsius">%s\u00B0 C</string>
    <string name="text_view_saved_temperature_fahrenhiet">%s\u00B0 F</string>

    <string name="err_msg_no_internet">Check your internet connection.</string>
    <string name="err_msg_select_city_state">Please insert City and State.</string>
    <string name="text_view_daily_forecast_for">Daily Forecast for&#160;</string>
    <string name="text_view_daily_forecast_value">%1$s, %2$s&#160;</string>
    <string name="msg_progress_dialog_loading">Loading Hourly Data</string>
    <string name="msg_no_matches">No cities match your query</string>
    <string name="msg_city_updated">City Updated.</string>
    <string name="msg_city_saved">City Saved.</string>

    <string name="msg_temperature_change_celsius">Temperature unit has been changed to \u00B0C</string>
    <string name="msg_temperature_change_fahrenheit">Temperature unit has been changed to \u00B0F</string>

    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_save_city">Save City</string>

    <string name="preference_item_temperature_title">Temperature Unit</string>
    <string name="preference_item_temperature_dialog_title">Select Temperature Unit</string>
    <string name="preference_item_temperature_dialog_description">Choose between Celsius and Fahrenheit</string>
    <string name="preference_item_temperature_default_value">c</string>
	<string name="text_view_hourly_forecast">Three Hourly Forecast on&#160; </string>
    <string name="text_view_hourly_forecast_value">%1$s </string>

    <string name="text_view_temperature"> Temperature: </string>

    <string name="text_view_temperature_value"> %1$s° %2$s</string>

    <string name="text_view_condition"> Condition: </string>
    <string name="text_view_pressure"> Pressure: </string>
    <string name="text_view_pressure_value"> %1$s° hPa</string>
    <string name="text_view_humidity"> Humidity: </string>
    <string name="text_view_humidity_value"> %1$s </string>
    <string name="text_view_winds"> Winds: </string>
    <string name="text_view_winds_value"> %1$s mPs, %2$s° %3$s </string>
    <string-array name="preference_item_temperature_entries">
        <item>\u00B0 C</item>
        <item>\u00B0 F</item>
    </string-array>
    <string-array name="preference_item_temperature_values">
        <item>c</item>
        <item>f</item>
    </string-array>
</resources>
